manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eve-kill
  namespace: eve-kill
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "http"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/enable-compression: "true"
    nginx.ingress.kubernetes.io/location-snippets: |
      location /killmails {
        proxy_set_header Upgrade "websocket";
        proxy_set_header Connection "Upgrade";
      }
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/proxy-real-ip-cidr: "0.0.0.0/0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - eve-kill.com
      secretName: evekill-tls
  rules:
    - host: eve-kill.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /scalar
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /killmails
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /_openapi.json
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
